// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowBlock renders 0 1`] = `
Array [
  .c0 {
  overflow-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders function 1`] = `
Array [
  .c0 {
  overflow-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders negative number 1`] = `
Array [
  .c0 {
  overflow-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  overflow-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-block: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  overflow-block: July;
}

@media May {
  .c0 {
    overflow-block: August;
  }
}

@media April {
  .c0 {
    overflow-block: September;
  }
}

@media January {
  .c0 {
    overflow-block: November;
  }
}

@media April {
  .c0 {
    overflow-block: August;
  }
}

@media June {
  .c0 {
    overflow-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: July;
}

@media May {
  .c0 {
    overflow-block: August;
  }
}

@media April {
  .c0 {
    overflow-block: September;
  }
}

@media January {
  .c0 {
    overflow-block: November;
  }
}

@media April {
  .c0 {
    overflow-block: August;
  }
}

@media June {
  .c0 {
    overflow-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-block: November;
  }
}

@media April {
  .c0 {
    overflow-block: January;
  }
}

@media January {
  .c0 {
    overflow-block: December;
  }
}

@media April {
  .c0 {
    overflow-block: April;
  }
}

@media June {
  .c0 {
    overflow-block: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-block: November;
  }
}

@media April {
  .c0 {
    overflow-block: January;
  }
}

@media January {
  .c0 {
    overflow-block: December;
  }
}

@media April {
  .c0 {
    overflow-block: April;
  }
}

@media June {
  .c0 {
    overflow-block: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    overflow-block: July;
  }
}

@media April {
  .c0 {
    overflow-block: August;
  }
}

@media January {
  .c0 {
    overflow-block: September;
  }
}

@media April {
  .c0 {
    overflow-block: November;
  }
}

@media June {
  .c0 {
    overflow-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-block: July;
  }
}

@media April {
  .c0 {
    overflow-block: August;
  }
}

@media January {
  .c0 {
    overflow-block: September;
  }
}

@media April {
  .c0 {
    overflow-block: November;
  }
}

@media June {
  .c0 {
    overflow-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-block: January;
  }
}

@media April {
  .c0 {
    overflow-block: December;
  }
}

@media January {
  .c0 {
    overflow-block: April;
  }
}

@media April {
  .c0 {
    overflow-block: May;
  }
}

@media June {
  .c0 {
    overflow-block: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-block: January;
  }
}

@media April {
  .c0 {
    overflow-block: December;
  }
}

@media January {
  .c0 {
    overflow-block: April;
  }
}

@media April {
  .c0 {
    overflow-block: May;
  }
}

@media June {
  .c0 {
    overflow-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders postitive number 1`] = `
Array [
  .c0 {
  overflow-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders string 1`] = `
Array [
  .c0 {
  overflow-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowBlock renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`overflowBlock renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
